refactor: introduce workflow management classes and enhance validation for workflow creation